# ClassyNews

./: DOCKER_README.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  app.py  docker-compose-with-frontend.yml  docker-compose.yml  prediction_history.json  pyproject.toml  requirements.txt  vercel.json
frontend/: nginx.conf  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
