[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "classinews"
version = "1.0.0"
description = "News Classification with AI"
requires-python = ">=3.11"
dependencies = [
    "Flask==2.3.3",
    "Flask-CORS==4.0.0",
    "joblib==1.3.2",
    "nltk==3.8.1",
    "scikit-learn==1.3.2",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "gunicorn==21.2.0",
]
